Switch to Rosa for the 404!

--- a/404.md
+++ b/404.md
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <div markdown="1" class="text-center" style="display: inline-block">
 
-![Shrugging DSA Rose and Hands](/images/logos/rose_shrug_404.png){:.img-responsive .img-circle .center-block srcset="/images/logos/rose_shrug_404@2x.png 2x"}
+![Shrugging DSA Rose and Hands](/images/logos/Rosa.png){:.img-responsive .center-block srcset="/images/logos/Rosa@2x.png 2x"}
 
 **404**: The requested page could not be found.
 
